force-app/main/default/objects/ScrapTruck__c/ScrapTruck__c.object-meta.xml
<CustomObject>
    <label>Автомобілі брухту</label>
    <nameField>
        <label>Держ. номер</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ScrapTruck</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>