force-app/main/default/objects/ScrapTruck__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Власник</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>ScrapTruck</relationshipName>
    <type>Lookup</type>
</CustomField>