force-app/main/default/objects/ScrapTruck__c/fields/AddedByUser__c.field-meta.xml
<CustomField>
    <fullName>AddedByUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Added By User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Scrap_Truck</relationshipName>
    <type>Lookup</type>
</CustomField>