force-app/main/default/objects/ScrapTruck__c/fields/ExtKey__c.field-meta.xml
<CustomField>
    <fullName>ExtKey__c</fullName>
    <formula>Name + &apos;_&apos;+ Account__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ExtKey</label>
    <type>Text</type>
</CustomField>