force-app/main/default/objects/ScrapTruck__c/fields/IsScrapHauler__c.field-meta.xml
<CustomField>
    <fullName>IsScrapHauler__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Брухтовоз АТЦ</label>
    <type>Checkbox</type>
</CustomField>