force-app/main/default/objects/ScrapTruck__c/fields/Tonnage__c.field-meta.xml
<CustomField>
    <fullName>Tonnage__c</fullName>
    <label>Тоннаж</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>