force-app/main/default/objects/ScrapTruck__c/fields/TruckModel__c.field-meta.xml
<CustomField>
    <fullName>TruckModel__c</fullName>
    <label>Марка/Модель</label>
    <length>255</length>
    <type>Text</type>
</CustomField>