force-app/main/default/objects/ScrapTruck__c/fields/TruckType__c.field-meta.xml
<CustomField>
    <fullName>TruckType__c</fullName>
    <label>Тип транспорту</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Truck</fullName>
                <label>Тягач</label>
            </value>
            <value>
                <fullName>Trailer</fullName>
                <label>Причеп</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>