force-app/main/default/objects/ScrapTruck__c/validationRules/Require_Account_On_Create.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Account_On_Create</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISNEW(),
  ISBLANK(Account__c)
)</errorConditionFormula>
    <errorMessage>Потрібно вибрати Аккаунт (поле «Власник»).</errorMessage>
</ValidationRule>