force-app/main/default/objects/ScrapTruck__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>TruckModel__c</columns>
    <columns>TruckType__c</columns>
    <columns>Tonnage__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>ExtKey__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>